@@ -170,7 +170,6 @@ bigint_errno bigint_pow_by_int(bigint* p_bigint, int pow);
 bigint_errno bigint_divmod(bigint* a, bigint* b, bigint* q, bigint* r);
 
 // return -BIGINT_ILLEGAL_PARAM if p_src is zero
-// TODO division
 bigint_errno bigint_div_by(bigint* p_dst, bigint* p_src);
 
 // return -BIGINT_ILLEGAL_PARAM if 'div' is zero
@@ -198,7 +197,7 @@ bigint_errno bigint_root_n_ceiling(bigint* p_bigint, int n);
 // TODO
 bigint_errno bigint_root_n_floor(bigint* p_bigint, int n);
 
-// TODO
+// get the remainder as a % b, it has same sign as b
 bigint_errno bigint_mod_by(bigint* p_dst, bigint* p_src);
 
 // get the result of 'mod', the bigint is not changed, and result is
@@ -208,7 +207,6 @@ bigint_errno bigint_mod_by(bigint* p_dst, bigint* p_src);
 // which means '5 % 3 = 2', and '-5 % 3 = -2'
 // '5 % (-3) = -2', '(-5) % (-3) = 2'
 // if value is 0, then return -BIGINT_ILLEGAL_PARAM
-// TODO
 bigint_errno bigint_mod_by_int(bigint* p_bigint, int value, int* p_result);
 
 // mod the bigint by some power of 10. this is like discarding
